<resources>
    <string name="app_name">Laboratorio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_noticias">Noticias</string>
    <string name="text_equipot">Equipo de trabajo</string>
    <string name="text_Miperfil">Mi perfil</string>
    <string name="txt_noticia0">Matias Herrera Caceres</string>
    <string name="txt_tituloNoticia">Nuevo curso de impresión 3D</string>
    <string name="txt_descipcionNoticia">Correo: matiashc@ufps.edu.co</string>
    <string name="action_inscribirme">Inscribirme</string>
    <string name="action_verDetalles">Ver detalles</string>
    <string name="txt_descripcionNoticia1">Profesor: Pepito Perez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mesg_botoninicio">Cerrar sesión</string>
    <string name="welcome">welcome</string>
    <string name="nombre">nombre</string>
    <string name="correo">correo</string>
    <string name="Cerrarsesión">Cerrar Sesión</string>
    <string name="txt_tituloEquipo0">Matias Herrera Caceres</string>
    <string name="txt_tituloEquipo1">Zaira Gonzalez Rodríguez</string>
    <string name="txt_correo1">proyectosfablab@ufps.edu.co</string>
    <string name="txt_tituloEquipo2">Nancy Marcela Alvarez Garnica</string>
    <string name="txt_correo2">mentortecnicofablab@ufps.edu.co</string>


</resources>